Fix spacing of event overall verification

--- a/public/sites/all/themes/custom/np/css/global.css.less
+++ b/public/sites/all/themes/custom/np/css/global.css.less
@@ -919,6 +919,11 @@ ul.inline li {
     }
   }
 
+  // Overall
+  .field-name-field-verification-narrative {
+    margin: 10px 0 0 0;
+  }
+
   // When
   .field-name-field-when-date,
   .field-name-field-when-posts {
